# Secure-Messaging-App

./: .gitignore  Cargo.toml  Parameters.docx  README.md  Trunk.toml  index.html  run.js
backend/: package-lock.json  package.json  setupKeys.js
backend/security/ca/: ca.js
backend/security/crypto/: aes.js  hmac.js  rsa.js
backend/security/keys/: bob_private.pem  bob_public.pem
backend/security/services/: session.js
backend/server/: server.js
backend/test/: alice.js  bob.js  mallory.js
keys/: alice_private.pem  alice_public.pem  bob_private.pem  bob_public.pem  mallory_private.pem  mallory_public.pem
src/: lib.rs  main.rs
src/api/: fetch.rs
src/crypto/: aes_cbc.rs  hmac.rs  mod.rs  rsa.rs  session.rs
src/ui/: app.rs  mod.rs  secure_mode_context.rs  user_context.rs
src/ui/components/: chat_window.rs  contact_list.rs  message_item.rs  mod.rs  secure_session_list.rs  sidebar.rs  sidebar_header.rs
